# zuu

./: .gitignore  README.md  lefthook.yml  pyproject.toml
.github/workflows/: publish.yml
scripts/: bump_micro_version.py  update_current.py
src/zuu/current/: deep_dict.py  detect_editor.py  diff.py  enum_vscode_editors.py  gh.py  gh_cache_dir.py  git.py
src/zuu/v202602_1/: deep_dict.py  detect_editor.py  diff.py  enum_vscode_editors.py  gh.py  gh_cache_dir.py  git.py
tests/: test_bump_micro_version.py  test_deep_dict.py  test_detect_editor.py  test_gh.py  test_gh_cache_dir.py  test_update_current.py
